[package]
name = "structnmap"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude=[".DS_Store"]
description = "This is a tool for parsing nmap xml and structing it to files by service name"
repository = "https://github.com/arg2u/structnmap.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "structnmap"
structnmap = "src/lib.rs"
doctest = false
doc = true 
crate-type = ["lib"]

[dependencies]
parsenmap = "0.1"
structopt = "0.3.26"